--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "express": "4.17.1",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+    "mysql": "^2.18.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5"
   }
 }
